feat: update frontend components and i18n translations

--- a/web/src/i18n/locales/en.json
+++ b/web/src/i18n/locales/en.json
@@ -9,7 +9,18 @@
     "benefits": "Benefits",
     "bonuses": "Bonuses & Commissions",
     "settings": "Settings",
-    "logout": "Logout"
+    "logout": "Logout",
+    "testing": "Testing",
+    "navigation": "Navigation"
+  },
+  "app": {
+    "title": "HR Management System",
+    "subtitle": "Professional HR Solutions",
+    "welcome": "Welcome",
+    "lastLogin": "Last login",
+    "changePassword": "Change Password",
+    "pleaseChangePassword": "Please change your password soon to avoid being locked out",
+    "dismiss": "Dismiss"
   },
   "dashboard": {
     "title": "Dashboard",
@@ -20,7 +31,46 @@
     "totalPayroll": "Total Payroll",
     "pendingLeave": "Pending Leave Requests",
     "recentActivity": "Recent Activity",
-    "noActivity": "No recent activity"
+    "noActivity": "No recent activity",
+    "loadingInsights": "Loading your HR insights...",
+    "happeningInOrg": "Here's what's happening in your organization",
+    "timeRange": "Time Range",
+    "thisWeek": "This Week",
+    "thisMonth": "This Month",
+    "thisQuarter": "This Quarter",
+    "thisYear": "This Year",
+    "refreshing": "Refreshing...",
+    "refresh": "Refresh",
+    "newHiresThisMonth": "New Hires (This Month)",
+    "turnoverRate": "Turnover Rate",
+    "avgHoursWorked": "Avg Hours Worked",
+    "perWeek": "Per week",
+    "uploadTimecardsToTrack": "Upload timecards to track",
+    "payrollOverview": "Payroll Overview",
+    "avgPerEmployee": "Avg per Employee",
+    "period": "Period",
+    "noPayrollDataFor": "No payroll data for",
+    "uploadTimecardsToGenerate": "Upload timecards to generate payroll",
+    "attendanceMetrics": "Attendance Metrics",
+    "avgHoursWeek": "Avg Hours/Week",
+    "employeesTracked": "Employees Tracked",
+    "noAttendanceDataFor": "No attendance data for",
+    "uploadTimecardsToTrackAttendance": "Upload timecards to track attendance",
+    "complianceStatus": "Compliance Status",
+    "contractsSigned": "Contracts Signed",
+    "trainingEnrolled": "Training Enrolled",
+    "employmentMix": "Employment Mix",
+    "fullTime": "Full-time",
+    "partTime": "Part-time",
+    "contract": "Contract",
+    "employees": "employees",
+    "departmentDistribution": "Department Distribution",
+    "noDepartmentData": "No department data available",
+    "quickActions": "Quick Actions",
+    "uploadTimecards": "Upload Timecards",
+    "uploadBonuses": "Upload Bonuses",
+    "leaveRequests": "Leave & Requests",
+    "payroll": "Payroll"
   },
   "employees": {
     "title": "Employees",
@@ -46,7 +96,10 @@
     "terminateEmployee": "Terminate Employee",
     "noEmployees": "No employees found",
     "employmentType": "Employment Type",
-    "loading": "Loading employees..."
+    "loading": "Loading employees...",
+    "description": "Manage your workforce and employee records",
+    "foundEmployees": "Found {{count}} employee(s) matching \"{{query}}\"",
+    "searchHint": "Try adjusting your search terms or clear the search to see all employees."
   },
   "leave": {
     "title": "Leave Management",
@@ -68,7 +121,23 @@
     "duration": "Duration",
     "days": "days",
     "submittedOn": "Submitted On",
-    "noRequests": "No leave requests"
+    "noRequests": "No leave requests",
+    "description": "Manage employee leave requests and balances",
+    "types": {
+      "vacation": "Vacation",
+      "sickLeave": "Sick Leave",
+      "personalLeave": "Personal Leave",
+      "bereavement": "Bereavement",
+      "parentalLeave": "Parental Leave",
+      "juryDuty": "Jury Duty",
+      "militaryLeave": "Military Leave"
+    },
+    "submitRequest": "Submit Request",
+    "myRequests": "My Requests",
+    "leaveCalendar": "Leave Calendar",
+    "leaveRequests": "Leave Requests",
+    "leaveBalances": "Leave Balances",
+    "analytics": "Analytics"
   },
   "payroll": {
     "title": "Payroll",
@@ -93,7 +162,19 @@
     "totalHours": "Total Hours",
     "weeklyHours": "Weekly Hours",
     "timesheets": "Timesheets",
-    "viewTimecard": "View Timecard"
+    "viewTimecard": "View Timecard",
+    "description": "Employee timecard management",
+    "uploadTimecards": "Upload Timecards",
+    "dayView": "Day View",
+    "timecardUploads": "Timecard Uploads",
+    "selectDate": "Select Date",
+    "search": "Search by employee name, department, or email...",
+    "foundEmployees": "Found {{count}} employee(s) matching \"{{query}}\"",
+    "noEmployeesFound": "No employees found",
+    "adjustSearchTerms": "Try adjusting your search terms or clear the search to see all employees.",
+    "noDataForDate": "No Data for This Date",
+    "selectAnotherDate": "Select another date or upload timecards",
+    "loadingTimecards": "Loading timecards..."
   },
   "compliance": {
     "title": "Compliance",
@@ -141,7 +222,41 @@
     "automaticBackup": "Automatic Backup",
     "backupFrequency": "Backup Frequency",
     "dateFormat": "Date Format",
-    "currency": "Currency"
+    "currency": "Currency",
+    "loadingSettings": "Loading settings...",
+    "changePassword": "Change Password",
+    "trustedDevices": "Trusted Devices",
+    "revokeAll": "Revoke All",
+    "revoke": "Revoke",
+    "noTrustedDevices": "No trusted devices yet",
+    "trustDeviceNote": "When you check \"Trust this device for 7 days\" during MFA login, it will appear here"
+  },
+  "login": {
+    "title": "C&C HR",
+    "subtitle": "Command & Control Logistics",
+    "developer": "Developed by Udi Shkolnik",
+    "username": "Username",
+    "password": "Password",
+    "signIn": "Sign In",
+    "signingIn": "Signing in...",
+    "demoCredentials": "Demo Credentials",
+    "sessionTimeout": "Session timeout: 30 minutes",
+    "autoLogout": "Auto-logout on inactivity",
+    "mfaTitle": "Two-Factor Authentication",
+    "mfaDescription": "Enter the 6-digit code from your authenticator app",
+    "verifyCode": "Verify Code",
+    "verifying": "Verifying...",
+    "backToLogin": "← Back to login",
+    "mfaTip": "💡 Tip: The code changes every 30 seconds",
+    "trustDevice": "Trust this device for 7 days",
+    "trustDeviceWarning": "⚠️ Only enable on devices you personally own and control. Never use on public or shared computers.",
+    "passwordChangeRequired": "Password Change Required",
+    "newPassword": "New Password",
+    "confirmPassword": "Confirm Password",
+    "changePassword": "Change Password",
+    "changingPassword": "Changing Password...",
+    "passwordChangeNote": "💡 After changing, you'll need to log in with your new password",
+    "passwordMinLength": "Must be at least 8 characters. Cannot reuse your last 5 passwords."
   },
   "common": {
     "save": "Save",
