--- a/web/src/i18n/locales/es.json
+++ b/web/src/i18n/locales/es.json
@@ -9,7 +9,18 @@
     "benefits": "Beneficios",
     "bonuses": "Bonificaciones y Comisiones",
     "settings": "Configuración",
-    "logout": "Cerrar Sesión"
+    "logout": "Cerrar Sesión",
+    "testing": "Pruebas",
+    "navigation": "Navegación"
+  },
+  "app": {
+    "title": "Sistema de Gestión de RRHH",
+    "subtitle": "Soluciones Profesionales de RRHH",
+    "welcome": "Bienvenido",
+    "lastLogin": "Último acceso",
+    "changePassword": "Cambiar Contraseña",
+    "pleaseChangePassword": "Por favor cambie su contraseña pronto para evitar quedar bloqueado",
+    "dismiss": "Descartar"
   },
   "dashboard": {
     "title": "Panel de Control",
@@ -20,7 +31,46 @@
     "totalPayroll": "Nómina Total",
     "pendingLeave": "Solicitudes de Ausencia Pendientes",
     "recentActivity": "Actividad Reciente",
-    "noActivity": "Sin actividad reciente"
+    "noActivity": "Sin actividad reciente",
+    "loadingInsights": "Cargando información de RRHH...",
+    "happeningInOrg": "Esto es lo que está pasando en su organización",
+    "timeRange": "Rango de Tiempo",
+    "thisWeek": "Esta Semana",
+    "thisMonth": "Este Mes",
+    "thisQuarter": "Este Trimestre",
+    "thisYear": "Este Año",
+    "refreshing": "Actualizando...",
+    "refresh": "Actualizar",
+    "newHiresThisMonth": "Nuevas Contrataciones (Este Mes)",
+    "turnoverRate": "Tasa de Rotación",
+    "avgHoursWorked": "Horas Trabajadas Promedio",
+    "perWeek": "Por semana",
+    "uploadTimecardsToTrack": "Suba tarjetas de tiempo para rastrear",
+    "payrollOverview": "Resumen de Nómina",
+    "avgPerEmployee": "Promedio por Empleado",
+    "period": "Período",
+    "noPayrollDataFor": "Sin datos de nómina para",
+    "uploadTimecardsToGenerate": "Suba tarjetas de tiempo para generar nómina",
+    "attendanceMetrics": "Métricas de Asistencia",
+    "avgHoursWeek": "Horas Promedio/Semana",
+    "employeesTracked": "Empleados Rastreados",
+    "noAttendanceDataFor": "Sin datos de asistencia para",
+    "uploadTimecardsToTrackAttendance": "Suba tarjetas de tiempo para rastrear asistencia",
+    "complianceStatus": "Estado de Cumplimiento",
+    "contractsSigned": "Contratos Firmados",
+    "trainingEnrolled": "Capacitación Inscrita",
+    "employmentMix": "Mezcla de Empleo",
+    "fullTime": "Tiempo completo",
+    "partTime": "Tiempo parcial",
+    "contract": "Contrato",
+    "employees": "empleados",
+    "departmentDistribution": "Distribución por Departamento",
+    "noDepartmentData": "No hay datos de departamento disponibles",
+    "quickActions": "Acciones Rápidas",
+    "uploadTimecards": "Subir Tarjetas de Tiempo",
+    "uploadBonuses": "Subir Bonificaciones",
+    "leaveRequests": "Solicitudes de Ausencia",
+    "payroll": "Nómina"
   },
   "employees": {
     "title": "Empleados",
@@ -47,7 +97,9 @@
     "noEmployees": "No se encontraron empleados",
     "employmentType": "Tipo de Empleo",
     "loading": "Cargando empleados...",
-    "description": "Gestione su fuerza laboral y registros de empleados"
+    "description": "Gestione su fuerza laboral y registros de empleados",
+    "foundEmployees": "Se encontraron {{count}} empleado(s) que coinciden con \"{{query}}\"",
+    "searchHint": "Intente ajustar sus términos de búsqueda o borre la búsqueda para ver todos los empleados."
   },
   "leave": {
     "title": "Gestión de Ausencias",
@@ -70,6 +122,7 @@
     "days": "días",
     "submittedOn": "Enviado el",
     "noRequests": "No hay solicitudes de ausencia",
+    "description": "Gestionar solicitudes y saldos de ausencias de empleados",
     "types": {
       "vacation": "Vacaciones",
       "sickLeave": "Licencia por Enfermedad",
@@ -78,7 +131,13 @@
       "parentalLeave": "Licencia Parental",
       "juryDuty": "Deber de Jurado",
       "militaryLeave": "Licencia Militar"
-    }
+    },
+    "submitRequest": "Enviar Solicitud",
+    "myRequests": "Mis Solicitudes",
+    "leaveCalendar": "Calendario de Ausencias",
+    "leaveRequests": "Solicitudes de Ausencia",
+    "leaveBalances": "Saldos de Ausencias",
+    "analytics": "Analíticas"
   },
   "payroll": {
     "title": "Nómina",
@@ -103,7 +162,19 @@
     "totalHours": "Total de Horas",
     "weeklyHours": "Horas Semanales",
     "timesheets": "Hojas de Tiempo",
-    "viewTimecard": "Ver Tarjeta de Tiempo"
+    "viewTimecard": "Ver Tarjeta de Tiempo",
+    "description": "Gestión de tarjetas de tiempo de empleados",
+    "uploadTimecards": "Subir Tarjetas de Tiempo",
+    "dayView": "Vista por Día",
+    "timecardUploads": "Cargas de Tarjetas de Tiempo",
+    "selectDate": "Seleccionar Fecha",
+    "search": "Buscar por nombre de empleado, departamento o correo electrónico...",
+    "foundEmployees": "Se encontraron {{count}} empleado(s) que coinciden con \"{{query}}\"",
+    "noEmployeesFound": "No se encontraron empleados",
+    "adjustSearchTerms": "Intente ajustar sus términos de búsqueda o borre la búsqueda para ver todos los empleados.",
+    "noDataForDate": "Sin Datos para Esta Fecha",
+    "selectAnotherDate": "Seleccione otra fecha o suba tarjetas de tiempo",
+    "loadingTimecards": "Cargando tarjetas de tiempo..."
   },
   "compliance": {
     "title": "Cumplimiento",
@@ -151,7 +222,41 @@
     "automaticBackup": "Copia de Seguridad Automática",
     "backupFrequency": "Frecuencia de Copia de Seguridad",
     "dateFormat": "Formato de Fecha",
-    "currency": "Moneda"
+    "currency": "Moneda",
+    "loadingSettings": "Cargando configuración...",
+    "changePassword": "Cambiar Contraseña",
+    "trustedDevices": "Dispositivos de Confianza",
+    "revokeAll": "Revocar Todos",
+    "revoke": "Revocar",
+    "noTrustedDevices": "Aún no hay dispositivos de confianza",
+    "trustDeviceNote": "Cuando marca \"Confiar en este dispositivo por 7 días\" durante el inicio de sesión con MFA, aparecerá aquí"
+  },
+  "login": {
+    "title": "C&C HR",
+    "subtitle": "Command & Control Logistics",
+    "developer": "Desarrollado por Udi Shkolnik",
+    "username": "Nombre de Usuario",
+    "password": "Contraseña",
+    "signIn": "Iniciar Sesión",
+    "signingIn": "Iniciando sesión...",
+    "demoCredentials": "Credenciales de Demostración",
+    "sessionTimeout": "Tiempo de espera de sesión: 30 minutos",
+    "autoLogout": "Cierre automático por inactividad",
+    "mfaTitle": "Autenticación de Dos Factores",
+    "mfaDescription": "Ingrese el código de 6 dígitos de su aplicación de autenticación",
+    "verifyCode": "Verificar Código",
+    "verifying": "Verificando...",
+    "backToLogin": "← Volver al inicio de sesión",
+    "mfaTip": "💡 Consejo: El código cambia cada 30 segundos",
+    "trustDevice": "Confiar en este dispositivo por 7 días",
+    "trustDeviceWarning": "⚠️ Solo habilite en dispositivos que usted personalmente posea y controle. Nunca use en computadoras públicas o compartidas.",
+    "passwordChangeRequired": "Se Requiere Cambio de Contraseña",
+    "newPassword": "Nueva Contraseña",
+    "confirmPassword": "Confirmar Contraseña",
+    "changePassword": "Cambiar Contraseña",
+    "changingPassword": "Cambiando Contraseña...",
+    "passwordChangeNote": "💡 Después de cambiar, deberá iniciar sesión con su nueva contraseña",
+    "passwordMinLength": "Debe tener al menos 8 caracteres. No puede reutilizar sus últimas 5 contraseñas."
   },
   "common": {
     "save": "Guardar",
