--- a/web/src/i18n/locales/fr.json
+++ b/web/src/i18n/locales/fr.json
@@ -9,7 +9,18 @@
     "benefits": "Avantages Sociaux",
     "bonuses": "Primes et Commissions",
     "settings": "Paramètres",
-    "logout": "Déconnexion"
+    "logout": "Déconnexion",
+    "testing": "Tests",
+    "navigation": "Navigation"
+  },
+  "app": {
+    "title": "Système de Gestion RH",
+    "subtitle": "Solutions RH Professionnelles",
+    "welcome": "Bienvenue",
+    "lastLogin": "Dernière connexion",
+    "changePassword": "Changer le Mot de Passe",
+    "pleaseChangePassword": "Veuillez changer votre mot de passe bientôt pour éviter d'être bloqué",
+    "dismiss": "Ignorer"
   },
   "dashboard": {
     "title": "Tableau de Bord",
@@ -20,7 +31,46 @@
     "totalPayroll": "Masse Salariale Totale",
     "pendingLeave": "Demandes de Congé en Attente",
     "recentActivity": "Activité Récente",
-    "noActivity": "Aucune activité récente"
+    "noActivity": "Aucune activité récente",
+    "loadingInsights": "Chargement de vos informations RH...",
+    "happeningInOrg": "Voici ce qui se passe dans votre organisation",
+    "timeRange": "Plage de Temps",
+    "thisWeek": "Cette Semaine",
+    "thisMonth": "Ce Mois",
+    "thisQuarter": "Ce Trimestre",
+    "thisYear": "Cette Année",
+    "refreshing": "Actualisation...",
+    "refresh": "Actualiser",
+    "newHiresThisMonth": "Nouvelles Embauches (Ce Mois)",
+    "turnoverRate": "Taux de Rotation",
+    "avgHoursWorked": "Heures Travaillées Moyennes",
+    "perWeek": "Par semaine",
+    "uploadTimecardsToTrack": "Téléchargez des feuilles de temps pour suivre",
+    "payrollOverview": "Aperçu de la Paie",
+    "avgPerEmployee": "Moyenne par Employé",
+    "period": "Période",
+    "noPayrollDataFor": "Aucune donnée de paie pour",
+    "uploadTimecardsToGenerate": "Téléchargez des feuilles de temps pour générer la paie",
+    "attendanceMetrics": "Métriques de Présence",
+    "avgHoursWeek": "Heures Moyennes/Semaine",
+    "employeesTracked": "Employés Suivis",
+    "noAttendanceDataFor": "Aucune donnée de présence pour",
+    "uploadTimecardsToTrackAttendance": "Téléchargez des feuilles de temps pour suivre la présence",
+    "complianceStatus": "Statut de Conformité",
+    "contractsSigned": "Contrats Signés",
+    "trainingEnrolled": "Formation Inscrite",
+    "employmentMix": "Répartition de l'Emploi",
+    "fullTime": "Temps plein",
+    "partTime": "Temps partiel",
+    "contract": "Contrat",
+    "employees": "employés",
+    "departmentDistribution": "Distribution par Département",
+    "noDepartmentData": "Aucune donnée de département disponible",
+    "quickActions": "Actions Rapides",
+    "uploadTimecards": "Télécharger Feuilles de Temps",
+    "uploadBonuses": "Télécharger Primes",
+    "leaveRequests": "Demandes de Congé",
+    "payroll": "Paie"
   },
   "employees": {
     "title": "Employés",
@@ -47,7 +97,9 @@
     "noEmployees": "Aucun employé trouvé",
     "employmentType": "Type de Contrat",
     "loading": "Chargement des employés...",
-    "description": "Gérer votre personnel et les dossiers des employés"
+    "description": "Gérer votre personnel et les dossiers des employés",
+    "foundEmployees": "{{count}} employé(s) trouvé(s) correspondant à \"{{query}}\"",
+    "searchHint": "Essayez d'ajuster vos termes de recherche ou effacez la recherche pour voir tous les employés."
   },
   "leave": {
     "title": "Gestion des Congés",
@@ -70,6 +122,7 @@
     "days": "jours",
     "submittedOn": "Soumis le",
     "noRequests": "Aucune demande de congé",
+    "description": "Gérer les demandes et les soldes de congés des employés",
     "types": {
       "vacation": "Vacances",
       "sickLeave": "Congé Maladie",
@@ -78,7 +131,13 @@
       "parentalLeave": "Congé Parental",
       "juryDuty": "Service de Jury",
       "militaryLeave": "Congé Militaire"
-    }
+    },
+    "submitRequest": "Soumettre la Demande",
+    "myRequests": "Mes Demandes",
+    "leaveCalendar": "Calendrier des Congés",
+    "leaveRequests": "Demandes de Congé",
+    "leaveBalances": "Soldes de Congés",
+    "analytics": "Analytiques"
   },
   "payroll": {
     "title": "Paie",
@@ -103,7 +162,19 @@
     "totalHours": "Total des Heures",
     "weeklyHours": "Heures Hebdomadaires",
     "timesheets": "Feuilles de Temps",
-    "viewTimecard": "Voir la Fiche de Temps"
+    "viewTimecard": "Voir la Fiche de Temps",
+    "description": "Gestion des feuilles de temps des employés",
+    "uploadTimecards": "Télécharger Feuilles de Temps",
+    "dayView": "Vue par Jour",
+    "timecardUploads": "Téléchargements de Feuilles de Temps",
+    "selectDate": "Sélectionner la Date",
+    "search": "Rechercher par nom d'employé, département ou courriel...",
+    "foundEmployees": "{{count}} employé(s) trouvé(s) correspondant à \"{{query}}\"",
+    "noEmployeesFound": "Aucun employé trouvé",
+    "adjustSearchTerms": "Essayez d'ajuster vos termes de recherche ou effacez la recherche pour voir tous les employés.",
+    "noDataForDate": "Aucune Donnée pour Cette Date",
+    "selectAnotherDate": "Sélectionnez une autre date ou téléchargez des feuilles de temps",
+    "loadingTimecards": "Chargement des feuilles de temps..."
   },
   "compliance": {
     "title": "Conformité",
@@ -151,7 +222,41 @@
     "automaticBackup": "Sauvegarde Automatique",
     "backupFrequency": "Fréquence de Sauvegarde",
     "dateFormat": "Format de Date",
-    "currency": "Devise"
+    "currency": "Devise",
+    "loadingSettings": "Chargement des paramètres...",
+    "changePassword": "Changer le Mot de Passe",
+    "trustedDevices": "Appareils de Confiance",
+    "revokeAll": "Révoquer Tous",
+    "revoke": "Révoquer",
+    "noTrustedDevices": "Aucun appareil de confiance pour le moment",
+    "trustDeviceNote": "Lorsque vous cochez \"Faire confiance à cet appareil pendant 7 jours\" lors de la connexion MFA, il apparaîtra ici"
+  },
+  "login": {
+    "title": "C&C HR",
+    "subtitle": "Command & Control Logistics",
+    "developer": "Développé par Udi Shkolnik",
+    "username": "Nom d'Utilisateur",
+    "password": "Mot de Passe",
+    "signIn": "Se Connecter",
+    "signingIn": "Connexion...",
+    "demoCredentials": "Identifiants de Démonstration",
+    "sessionTimeout": "Délai d'expiration de session : 30 minutes",
+    "autoLogout": "Déconnexion automatique en cas d'inactivité",
+    "mfaTitle": "Authentification à Deux Facteurs",
+    "mfaDescription": "Entrez le code à 6 chiffres de votre application d'authentification",
+    "verifyCode": "Vérifier le Code",
+    "verifying": "Vérification...",
+    "backToLogin": "← Retour à la connexion",
+    "mfaTip": "💡 Astuce : Le code change toutes les 30 secondes",
+    "trustDevice": "Faire confiance à cet appareil pendant 7 jours",
+    "trustDeviceWarning": "⚠️ N'activez que sur les appareils que vous possédez et contrôlez personnellement. Ne jamais utiliser sur des ordinateurs publics ou partagés.",
+    "passwordChangeRequired": "Changement de Mot de Passe Requis",
+    "newPassword": "Nouveau Mot de Passe",
+    "confirmPassword": "Confirmer le Mot de Passe",
+    "changePassword": "Changer le Mot de Passe",
+    "changingPassword": "Changement du Mot de Passe...",
+    "passwordChangeNote": "💡 Après le changement, vous devrez vous connecter avec votre nouveau mot de passe",
+    "passwordMinLength": "Doit contenir au moins 8 caractères. Impossible de réutiliser vos 5 derniers mots de passe."
   },
   "common": {
     "save": "Enregistrer",
